...
  <string name="menu_home">Home</string>
  <string name="menu_options">Options</string>
  <string name="menu_my_downloads">My Downloads</string>
  <string name="menu_help">Help</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="welcome_text">Welcome to Oppia!</string>
  <string name="welcome_back_text">Welcome back to Oppia!</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_language_select_dialog_okay_button">OK</string>
...
  <string name="add_profile_create_a_3_digit_pin">Create a 3-Digit PIN</string>
  <string name="add_profile_required">*Required</string>
  <string name="back_button">Back Button</string>
  <string name="next">Next</string>
  <!-- AdministratorControlsFragment -->
  <string name="administrator_controls_general_label">General</string>
  <string name="administrator_controls_edit_account">Edit account</string>
  <string name="administrator_controls_profile_management_label">Profile Management</string>
  <string name="administrator_controls_edit_profiles">Edit profiles</string>
  <string name="administrator_controls_download_permissions_label">Download Permissions</string>
  <string name="administrator_controls_update_on_wifi_title">Download and update only on Wi-fi</string>
  <string name="administrator_controls_update_on_wifi_message">Topics will be downloaded and updated only on Wi-fi. Any downloads or updates of cellular data will be queued.</string>
  <string name="administrator_controls_auto_update_title">Automatically update topics</string>
  <string name="administrator_controls_auto_update_message">Downloaded topics that have new content available will automatically update.</string>
  <string name="administrator_controls_app_information_label">App Information</string>
  <string name="administrator_controls_app_version">App Version</string>
  <string name="administrator_controls_account_actions_label">Account Actions</string>
  <string name="administrator_controls_log_out">Log Out</string>
  <string name="log_out_dialog_cancel_button">Cancel</string>
  <string name="log_out_dialog_okay_button">Ok</string>
  <string name="log_out_dialog_message">Are you sure you want to log out of your profile?</string>
  <!-- AppVersionFragment -->
  <string name="app_version_name">App Version %s</string>
  <string name="app_last_update_date">The last update was installed on %s. Use the above version number to send feedback about bugs.</string>
  <!-- OptionsActivity -->
  <string name="title_reading_text_size">Reading Text Size</string>
  <string name="title_app_language">App Language</string>
...
