...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/download_permissions_text_view"
      style="@style/Caption"
      android:layout_width="match_parent"
      android:background="@color/mid_grey_30"
      android:paddingStart="16dp"
      android:paddingTop="28dp"
      android:paddingEnd="16dp"
      android:paddingBottom="20dp"
      android:text="@string/administrator_controls_download_permissions_label"
      android:textColor="@color/colorPrimary"
      app:layout_constraintBottom_toTopOf="@id/topic_update_on_wifi_constraint_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/topic_update_on_wifi_constraint_layout"
...
        android:id="@+id/topic_update_on_wifi_description_text_view"
        style="@style/Subtitle2"
        android:layout_width="0dp"
        android:background="@color/white"
        android:text="@string/administrator_controls_update_on_wifi_message"
        android:textColor="@color/accessible_light_grey"
        app:layout_constraintEnd_toStartOf="@id/topic_update_on_wifi_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_update_on_wifi_title_text_view" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/topic_update_on_wifi_switch"
        android:layout_width="wrap_content"
...

    <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/mid_grey_30"
      app:layout_constraintBottom_toTopOf="@id/auto_update_topic_constraint_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/topic_update_on_wifi_constraint_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/auto_update_topic_constraint_layout"
...
        android:id="@+id/auto_update_topic_description_text_view"
        style="@style/Subtitle2"
        android:layout_width="0dp"
        android:background="@color/white"
        android:text="@string/administrator_controls_auto_update_message"
        android:textColor="@color/accessible_light_grey"
        app:layout_constraintEnd_toStartOf="@id/auto_update_topic_switch"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_update_topic_title_text_view" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/auto_update_topic_switch"
...
