...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/general_text_view"
      style="@style/Heading5"
      android:layout_width="match_parent"
      android:background="@color/mid_grey_30"
      android:paddingStart="16dp"
      android:paddingTop="20dp"
      android:paddingEnd="16dp"
      android:paddingBottom="20dp"
      android:text="@string/administrator_controls_general_label"
      android:textColor="@color/colorPrimary"
      app:layout_constraintBottom_toTopOf="@id/edit_account_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/edit_account_text_view"
...
